refactor: getLegs()와 getLines()가 불변객체를 반환하는 방법을 List.copyOf