@@ -23,6 +23,6 @@ public class Ladder {
     }
 
     public List<Line> getLines() {
-        return Collections.unmodifiableList(lines);
+        return List.copyOf(lines);
     }
 }
